--- a/donate-today/style.css
+++ b/donate-today/style.css
@@ -17,7 +17,7 @@ body{
     padding-top: 250px;
     font-size: 60px;
 }
-.banner p{
+.banner-p{
     text-align: center;
     color: #FFFFFF;
     margin-bottom: 50px;
@@ -64,7 +64,7 @@ body{
     padding: 20px;
 }
 .selected-money{
-    color: #FF5959;
+    background-color: #FFEEEE;
 }
 
 input {
@@ -73,6 +73,7 @@ input {
     text-align: center;
     margin-left: 800px;
     padding-bottom: 10px;
+    margin-bottom: 20px;
     }
 
 input, input::placeholder {
@@ -80,7 +81,6 @@ input, input::placeholder {
     
 }
 
-   
     hr {
         border:none;
         border-top:3px solid #DADADA;
@@ -90,14 +90,136 @@ input, input::placeholder {
         width:50%;
         margin-left: 460px;
         padding-bottom: 20px;
+        margin-bottom: 20px;
       }
 .money-button{
     text-align: center;
    text-decoration: none;
    background-color: #FF5959;
-   padding: 16px 12px;
+   padding: 26px 22px;
    color: white;
    width: 160px;
+   font-size: 20px;
    margin-left: 850px;
 }
-     
+
+.donate-plan-heading{
+    text-align: center;
+    font-weight: 700;
+    font-size: 55px;
+    font-style: bold;
+    line-height: 54px;
+    padding-top: 130px;
+}
+.donate-plan-p{
+    text-align: center;
+    padding-top: 30px;
+}
+
+.plan-area{
+    display: flex;
+    width: 50%;
+    gap: 30px;
+    padding-right: 150px;
+    margin-left: 500px;
+    padding-top: 50px;
+    
+}
+.food{
+    box-sizing: border-box;
+    width: 500px;
+    background-color: #4F9DA61A;
+    border-radius: 10px;
+    padding: 60px;
+}
+.shelter{
+        box-sizing: border-box;
+        width: 500px;
+        background-color: #FF59591A;
+        border-radius: 10px;
+        padding: 60px;
+    }
+.education{
+    box-sizing: border-box;
+    width: 500px;
+    background-color: #FFF4D6;
+    border-radius: 10px;
+    padding: 60px;
+}
+
+/* Extra area */
+.extra-areaheading{
+    text-align: center;
+    font-weight: 700;
+    font-size: 55px;
+    font-style: bold;
+    line-height: 54px;
+    padding-top: 130px;
+}
+.how-it-works{
+    display: flex;
+    width: 50%;
+    gap: 30px;
+    padding-right: 150px;
+    margin-left: 500px;
+    padding-top: 50px;
+}
+.non-profit{
+    box-sizing: border-box;
+    width: 500px;
+    background-color: #0de9681a;
+    border-radius: 10px;
+    padding: 60px;
+}
+.donor{
+    box-sizing: border-box;
+    width: 500px;
+    background-color: #df3535f6;
+    border-radius: 10px;
+    padding: 60px;
+}
+.companies{
+    box-sizing: border-box;
+    width: 500px;
+    background-color: #5208ff1a;
+    border-radius: 10px;
+    padding: 60px;
+}
+.how-it-works h4{
+    color: rgb(204, 125, 22);
+}
+
+/* newsletter area */
+.newsletter-heading{
+    text-align: center;
+    font-weight: 700;
+    font-size: 55px;
+    font-style: bold;
+    line-height: 54px;
+    padding-top: 130px;
+}
+.newsletter-p{
+    text-align: center;
+    padding-top: 30px;
+}
+.subscription{
+    background-color: #5208ff1a;
+    padding-bottom: 50px;
+    display: flex;
+}
+.email{
+   color: #D9D9D9;
+   height: 50px;
+}
+.sub-button{
+    color: #FF5959;
+    height: 50px;
+}
+
+/* footer */
+footer{
+    text-align: center;
+    background-color: black;
+    color: #FF5959;
+    padding-top: 50px;
+}
