done and changed repo

--- a/donate-today/style.css
+++ b/donate-today/style.css
@@ -216,7 +216,7 @@ input, input::placeholder {
 .sub-button{
     text-align: center;
     text-decoration: none;
-    background-color: #FF5959;
+    background-color: #fc6666;
     padding:  12px;
     color: white;
     width:200px;
